<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_project"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bkg_oval"
        tools:tint="@color/cardview_dark_background" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_task_descr"
        android:src="@drawable/ic_delete"
        app:tint="#DE000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/img_delete"
        android:layout_toEndOf="@+id/img_project"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Task name" />

        <TextView
            android:id="@+id/lbl_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="16sp"
            tools:text="Project name" />
    </LinearLayout>
</RelativeLayout>