<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/add_new_task_tv_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="12dp"
        android:gravity="center_horizontal"
        android:text="@string/add_new_task_title_dialog"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_task_alt_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/project_dropdown_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_new_task_tv_dialog">

        <AutoCompleteTextView
            android:id="@+id/project_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_dropdown_hint"
            android:inputType="none"
            android:labelFor="@+id/rooms_actv"
            android:textColorHint="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/txt_task_name"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/task_name_hint"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_btn_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_dropdown_layout" />


    <Button
        android:id="@+id/add_btn_dialog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_new_task_btn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/return_btn_dialog"
        app:layout_constraintTop_toBottomOf="@id/txt_task_name" />

    <Button
        android:id="@+id/return_btn_dialog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back_btn"
        android:textColor="@color/primaryVariant"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_btn_dialog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>